feat: updated structs definitions
