# models/models.go
@@ -52,21 +52,18 @@ type ConsumerMetrics struct {
 	MessagesRetried   int `json:"messages_retried"`   // Total messages that were retried
 }
 
-// UserData holds user-specific information for the notification.
-// This data is used to populate templates.
-type UserData struct {
-	Name string         `json:"name"`                                // User's full name
-	Link string         `json:"link"`                                // A relevant URL for the notification (e.g., verification link)
-	Meta map[string]any `json:"meta,omitempty" swaggertype:"object"` // Extra metadata for template substitution
+type UserResponses struct {
+	Success bool `json:"success"`
+	Data    User `json:"data"`
 }
 
-// NotifPushRequest represents the request body for sending notifications
-type NotifPushRequest struct {
-	NotificationType NotificationType `json:"notification_type" example:"push" enums:"push,email"` // The type of notification to send
-	UserID           string           `json:"user_id" example:"user1ab2c"`                         // The unique identifier for the user
-	TemplateID       string           `json:"template_code" example:"welcome_template"`            // The code/ID of the template to use
-	Variables        UserData         `json:"variables"`                                           // The dynamic data to inject into the template
-	RequestId        string           `json:"request_id" example:"req_abc123"`                     // A unique ID for tracking this request
+type TemplateResponse struct {
+	Name string `json:"name"`
+	Body string `json:"body"`
+}
+
+type Variable struct {
+	Name string `json:"name"`
 }
 
 type User struct {
@@ -79,4 +76,11 @@ type User struct {
 type Preferences struct {
 	Email bool `json:"email"`
 	Push  bool `json:"push"`
+}
+
+type NotifMessageRequest struct {
+	UserID    string  `json:"user_id" example:"user1ab2c"`
+	PushToken *string `json:"push_token"`
+	Title     *string `json:"title"`
+	Body      *string `json:"body"`
 }
